<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_musics"
            android:icon="@drawable/ic_menu_musics"
            android:title="@string/menu_musics" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_menu_artist"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_menu_genre"
            android:title="@string/menu_genres" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_menu_album"
            android:title="@string/menu_albums" />
        <item
            android:id="@+id/country"
            android:icon="@drawable/ic_menu_country"
            android:title="@string/menu_countries" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorites" />

    </group>

    <item android:title="@string/menu_other_options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_download"
                    android:icon="@drawable/ic_menu_download"
                    android:title="@string/menu_downloads" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_abouts" />
            </group>
        </menu>
    </item>

</menu>
